@startuml ThietKeChiTiet_ChatBot
title Thiết kế chi tiết gói ChatBot (AI Agent tư vấn việc làm)

' Quy ước quan hệ (UML):
'   ..>   Dependency   (phụ thuộc)
'   --    Association  (kết hợp)
'   o--   Aggregation  (kết tập)
'   *--   Composition  (hợp thành)
'   --|>  Inheritance  (kế thừa)
'   ..|>  Implementation (thực thi)

skinparam classBackgroundColor #FFFFCC
skinparam classBorderColor black
skinparam backgroundColor #FEFECE
skinparam ArrowColor black
skinparam shadowing false

' ===== BOUNDARY (Giao diện) =====
class "ChatBot" <<boundary>> {}

' ===== CONTROL (Xử lý logic) =====
class "config/api.ts" as ApiC <<control>> {}
class "AIController" <<control>> {}
class "AIService" <<control>> {}
class "AiGatewayService" <<control>> {}
class "ChatModel (Spring AI)" as ChatModel <<control>> {}
class "VectorStore (Pinecone)" as VectorStore <<control>> {}

' ===== ENTITY (Dữ liệu) =====
class "Job" <<entity>> {}

' ===== Luồng chính (RAG) =====
"ChatBot" ..> ApiC : callFetchChat
ApiC ..> "AIController" : <<HTTP REST / JSON>>
"AIController" ..> "AIService" : chat
"AIService" ..> "VectorStore" : truy hồi job liên quan (RAG)
"AIService" ..> "Job" : nạp dữ liệu job
"AIService" ..> "AiGatewayService" : gọi LLM
"AiGatewayService" ..> "ChatModel" : <<Spring AI / Groq>>

@enduml
